k8s-deployment/database/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-database
  labels:
    name: bank-database
