k8s-deployment/database/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-db
  namespace: bank-database
spec:
  podSelector:
    matchLabels:
      app: bank-database-statefulset
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: bank-app
      podSelector:
        matchLabels:
          app: bank-app
    ports:
    - protocol: TCP
      port: 3306
  policyTypes:
  - Ingress
